--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -8,6 +8,7 @@ image-version: 40
 modules:
   - from-file: core-scripts.yml
   - from-file: core-packages.yml
+  - from-file: post-scripts.yml
   - type: signing 
 
 
