--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -8,7 +8,7 @@ image-version: 40
 modules:
   - from-file: core-scripts.yml
   - from-file: core-packages.yml
-  - from-file: hyprland-install.yml
+  - from-file: remove-recs.yml
   - type: signing 
 
 
