replaced foot with kitty for aesthetics

--- a/recipes/core-packages.yml
+++ b/recipes/core-packages.yml
@@ -16,10 +16,10 @@ install:
   - tuned
   - xdg-user-dirs
   - ddcutil
-  - foot
   - copyq
   - dunst
   - udiskie
+  - kitty
 
 #sound
   - pamixer
