--- a/recipes/core-packages.yml
+++ b/recipes/core-packages.yml
@@ -1,12 +1,16 @@
 type: rpm-ostree
 repos:
   - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-%OS_VERSION%/solopasha-hyprland-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/errornointernet/packages/repo/fedora-%OS_VERSION%/errornointernet-packages-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/erikreider/SwayNotificationCenter/repo/fedora-%OS_VERSION%/erikreider-SwayNotificationCenter-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/tofik/nwg-shell/repo/fedora-%OS_VERSION%/tofik-nwg-shell-fedora-%OS_VERSION%.repo
 install:
 #login/locking
   - greetd
   - tuigreet
   - hyprlock
   - hypridle
+  - wlogout
   - gnome-keyring
 
 #system utils
@@ -16,16 +20,28 @@ install:
   - tuned
   - xdg-user-dirs
   - ddcutil
-  - copyq
+  - cliphist
   - dunst
   - udiskie
   - kitty
   - neovim
+  - ImageMagick
+  - slurp
+  - grim
+  - yad
+  - inxi
+  - swappy
+  - nvtop
+  - cava
+  - fastfetch
+  - mousepad
+  - btop
+  - eog
+  - qalculate-gtk
 
 #sound
   - pamixer
   - alsa-utils
-  - pulseaudio-utils
   - pavucontrol
 
 #networking
@@ -38,6 +54,7 @@ install:
   - thunar-archive-plugin
   - thunar-volman
   - p7zip
+  - file-roller
   - unrar
   - gvfs-mtp
   - gvfs-gphoto2
@@ -51,23 +68,27 @@ install:
   - wlsunset
   - brightnessctl
   - kanshi
-  - flameshot
   - swww
-  - waypaper
 
 #theming
   - adwaita-qt5
+  - kvantum
   - fontawesome-fonts-all
   - gnome-themes-extra
   - gnome-icon-theme
   - paper-icon-theme
   - breeze-icon-theme 
   - papirus-icon-theme
+  - wallust
+  - nwg-look
 
   #hyprland
   - hyprland
   - hyprcursor
   - hyprutils
+  - aylurs-gtk-shell
+  - pyprland
+  - SwayNotificationCenter
   - xdg-desktop-portal-hyprland
   - waybar
   - rofi-wayland
