--- a/recipes/remove-packages.yml
+++ b/recipes/remove-packages.yml
@@ -3,6 +3,9 @@ remove: # removes recommended packages we don't want
   - dunst
   - nwg-panel
   - wofi
+  - firefox
+  - firefox-langpacks
+  - toolbox
 
 
 
