--- a/recipes/core-packages.yml
+++ b/recipes/core-packages.yml
@@ -4,6 +4,7 @@ repos:
   - https://copr.fedorainfracloud.org/coprs/errornointernet/packages/repo/fedora-%OS_VERSION%/errornointernet-packages-fedora-%OS_VERSION%.repo
   - https://copr.fedorainfracloud.org/coprs/erikreider/SwayNotificationCenter/repo/fedora-%OS_VERSION%/erikreider-SwayNotificationCenter-fedora-%OS_VERSION%.repo
   - https://copr.fedorainfracloud.org/coprs/tofik/nwg-shell/repo/fedora-%OS_VERSION%/tofik-nwg-shell-fedora-%OS_VERSION%.repo
+  - https://copr.fedorainfracloud.org/coprs/che/nerd-fonts/repo/fedora-%OS_VERSION%/che-nerd-fonts-fedora-%OS_VERSION%.repo
 install:
 #login/locking
   - greetd
@@ -90,6 +91,7 @@ install:
   - gtk-murrine-engine
   - fira-code-fonts
   - jetbrains-mono-fonts
+  - nerd-fonts
 
   #hyprland
   - hyprland
@@ -104,6 +106,7 @@ install:
 
   #silverblue replacement packages
   - distrobox
+
 
 
 
