--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -9,7 +9,8 @@ modules:
   - from-file: core-scripts.yml
   - from-file: core-packages.yml
   - from-file: remove-packages.yml
-  - type: signing 
+  - from-file: systemd-services.yml
+  - type: signing  
 
 
 
