lots of changes

--- a/recipes/hyprland-recipe.yml
+++ b/recipes/hyprland-recipe.yml
@@ -6,10 +6,11 @@ base-image: quay.io/fedora-ostree-desktops/base
 image-version: 40 
 
 modules:
-  - from-file: core-scripts.yml
-  - from-file: core-packages.yml
+  - from-file: hypr-scripts.yml
+  - from-file: hypr-packages.yml
+  - from-file: hypr-files.yml
   - from-file: remove-packages.yml
-  - from-file: systemd-services.yml
+  - from-file: hypr-services.yml
   - type: signing  
 
 
