--- a/files/system/etc/greetd/config.toml
+++ b/files/system/etc/greetd/config.toml
@@ -3,4 +3,4 @@ vt = 8
 
 [default_session]
 command = "tuigreet --remember --time -c 'Hyprland > /dev/null 2>&1'"
-user = "greeter"
+user = "greetd"
