--- a/recipes/hypr-files.yml
+++ b/recipes/hypr-files.yml
@@ -2,5 +2,5 @@ type: files
 files:
   - source: system/etc
     destination: /etc
-  - source: system/usr/local/share/fonts
-    destination: /var/usrlocal/share/fonts
+  - source: system/usr/share/fonts
+    destination: /usr/share/fonts
