--- a/recipes/remove-packages.yml
+++ b/recipes/remove-packages.yml
@@ -2,10 +2,13 @@ type: rpm-ostree
 remove: # removes recommended packages we don't want
   - dunst
   - nwg-panel
+  - nwg-bar
   - wofi
   - firefox
   - firefox-langpacks
   - toolbox
+  - xfce4-panel
+
 
 
 
