added vlc flatpak

--- a/recipes/hypr-flatpaks.yml
+++ b/recipes/hypr-flatpaks.yml
@@ -10,3 +10,4 @@ system:
     - org.pulseaudio.pavucontrol #pavucontrol - volume control for pulseaudio
     - org.gnome.eog #eye of gnome - basic image viewer
     - io.github.flattool.Warehouse #warehouse - for downloading and managing flatpaks
+    - org.videolan.VLC #vlc - video player
