--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,12 +6,13 @@ base-image: quay.io/fedora-ostree-desktops/base
 image-version: 40 
 
 modules:
-  - from-file: hypr-scripts.yml
-  - from-file: hypr-packages.yml
-  - from-file: hypr-flatpaks.yml
-  - from-file: hypr-files.yml
+  - from-file: scripts.yml
+  - from-file: packages.yml
+  - from-file: fonts.yml
+  - from-file: default-flatpaks.yml
+  - from-file: files.yml
   - from-file: remove-packages.yml
-  - from-file: hypr-services.yml
+  - from-file: services.yml
   - type: signing  
 
 
