moved unnecessary flatpaks into justfile

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -11,6 +11,7 @@ modules:
   - from-file: fonts.yml
   - from-file: default-flatpaks.yml
   - from-file: files.yml
+  - type: justfiles
   - from-file: remove-packages.yml
   - from-file: services.yml
   - type: signing  
