--- a/recipes/default-flatpaks.yml
+++ b/recipes/default-flatpaks.yml
@@ -2,12 +2,13 @@ type: default-flatpaks #preferred for desktop apps when possible, embrace immuta
 system:
   install:
     - org.mozilla.firefox #firefox - browsers
-    - com.github.wwmm.easyeffects #easyeffects - sound profiling
     - com.github.tchx84.Flatseal #flatseal - flatpak permissions
     - org.gnome.FileRoller #fileroller - archive manager
     - org.xfce.mousepad #mousepad - basic text editor that integrates with thunar
     - com.visualstudio.code #vscode - IDE
     - org.pulseaudio.pavucontrol #pavucontrol - volume control for pulseaudio
     - org.gnome.eog #eye of gnome - basic image viewer
-    - io.github.flattool.Warehouse #warehouse - for downloading and managing flatpaks
-    - org.videolan.VLC #vlc - video player
+    - io.mpv.Mpv #MPV - video player
+
+    
+
