lots of changes v3

--- a/recipes/services.yml
+++ b/recipes/services.yml
@@ -6,7 +6,7 @@ system:
     - libvirt-workaround.service
     - swtpm-workaround.service
     - greetd.service
-    - set-kargs.service
+    - check-kargs.service
     - lactd.service
  
 
