--- a/recipes/files.yml
+++ b/recipes/files.yml
@@ -1,6 +1,4 @@
 type: files
 files:
-  - source: system/etc
-    destination: /etc
-  - source: system/usr/share
-    destination: /usr/share
+  - source: system/usr
+    destination: /usr
