--- a/files/systemd/system/hyprpain-setup.service
+++ b/files/systemd/system/hyprpain-setup.service
@@ -6,7 +6,7 @@ Before=systemd-user-sessions.service
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/libexec/hyprpain-setup
+ExecStart=/usr/libexec/hyprpain-setup.sh
 
 [Install]
 WantedBy=multi-user.target
