--- a/recipes/files.yml
+++ b/recipes/files.yml
@@ -2,5 +2,5 @@ type: files
 files:
   - source: system/usr
     destination: /usr
-  - source: /system/etc
+  - source: system/etc
     destination: /etc
