final commit for now hopefully

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -13,6 +13,7 @@ modules:
   - from-file: files.yml
   - from-file: remove-packages.yml
   - from-file: services.yml
+  - from-file: dotfiles.yml
   - type: signing  
 
 
