--- a/recipes/packages.yml
+++ b/recipes/packages.yml
@@ -46,6 +46,7 @@ install:
   - python3-pip
   - python3-pyquery
   - python3-cairo
+  - rocclr
 
 #sound
   - pamixer
@@ -116,7 +117,7 @@ install:
   #silverblue replacement packages
   - distrobox
 
-  #lact (only ships via github binary, may make a script to do this automatically but cba now so remember to update url occasionally!)
-  - https://github.com/ilya-zlobintsev/LACT/releases/download/v0.6.0/lact-0.6.0-0.x86_64.fedora-41.rpm
+  #lact (cba to figure out how to do this automatically, remember to update)
+  - https://github.com/ilya-zlobintsev/LACT/releases/download/v0.7.0/lact-0.7.0-0.x86_64.fedora-41.rpm
 
 
