--- a/files/system/etc/greetd/config.toml
+++ b/files/system/etc/greetd/config.toml
@@ -2,5 +2,5 @@
 vt = 8
 
 [default_session]
-command = "tuigreet --remember --time -c 'Hyprland > /dev/null 2>&1'"
+command = "Hyprland > /dev/null 2>&1"
 user = "greetd"
