--- a/recipes/packages.yml
+++ b/recipes/packages.yml
@@ -11,8 +11,7 @@ install:
   - hyprlock
   - hypridle
   - wlogout
-  - kwallet
-  - pam-kwallet
+  - keepassxc 
 
 #system utils
   - qt5-qtwayland
