--- a/recipes/fonts.yml
+++ b/recipes/fonts.yml
@@ -2,6 +2,8 @@ type: fonts #prioritize over rpm-ostree install if available
 fonts:
   nerd-fonts:
     - NerdFontsSymbolsOnly
+    - FiraCode
   google-fonts:
     - Fira Code
+    - Fira Sans
     - JetBrains Mono
