--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,6 +7,7 @@ image-version: 42
 
 modules:
   - from-file: packages.yml
+  - from-file: remove-deps.yml
   - from-file: fonts.yml
   - from-file: files.yml
   - from-file: services.yml
