--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,11 +7,14 @@ image-version: 42
 
 stages:
   - name: anyrun
-    from: docker.io/rust:latest
+    from: docker.io/library/rust:latest
     modules:
       - type: script
         snippets:
           # Install build dependencies
+          - echo "deb http://deb.debian.org/debian bookworm main contrib non-free" > /etc/apt/sources.list
+          - echo "deb http://deb.debian.org/debian bookworm-updates main contrib non-free" >> /etc/apt/sources.list
+          - echo "deb http://security.debian.org/debian-security bookworm-security main contrib non-free" >> /etc/apt/sources.list
           - apt-get update && apt-get install -y \
              git build-essential pkg-config \
              libgtk-4-dev libgtk4-layer-shell-dev \
