--- a/recipes/packages.yml
+++ b/recipes/packages.yml
@@ -112,6 +112,8 @@ install:
     - distrobox
     #open tablet driver
     - https://github.com/OpenTabletDriver/OpenTabletDriver/releases/download/v0.6.5.1/opentabletdriver-0.6.5.1-1.x86_64.rpm
+    #anyrun
+    - https://github.com/kneepel/hyprpain/blob/main/files/packages/anyrun-25.9.3-1.fc42.x86_64.rpm 
 group-install:
   with-optional: true
   packages:
