--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -3,11 +3,11 @@ name: hyprpain
 description: nothing but pain
 
 base-image: quay.io/fedora-ostree-desktops/base-atomic
-image-version: 42
+image-version: 43
 
 
 modules:
-  - from-file: packages.yml
+  - from-file: packages-dms.yml
   - from-file: remove-deps.yml
   - from-file: fonts.yml
   - from-file: files.yml
