--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,7 +7,7 @@ image-version: 43
 
 
 modules:
-  - from-file: dms-packages.yml
+  - from-file: dms-test.yml
   - from-file: remove-deps.yml
   - from-file: fonts.yml
   - from-file: files.yml
