--- a/recipes/dms-packages.yml
+++ b/recipes/dms-packages.yml
@@ -17,26 +17,26 @@ install:
     - repo: xpipe-repo
       packages:
         - xpipe
-    #- repo: copr:copr.fedorainfracloud.org:solopasha:hyprland
-     # packages:
-     #   - hyprland
-      #  - hyprcursor
-      #  - hyprutils
-       # - hyprpicker
-       # - pyprland
-       # - xdg-desktop-portal-hyprland
-       # - cliphist
-       # - matugen
-       # - uwsm
-    #- repo: copr:copr.fedorainfracloud.org:avengemedia:dms
-      #packages:
-        #- dms
-    #- repo: copr:copr.fedorainfracloud.org:avengemedia:danklinux
-      #packages:
-        #- quickshell
-        #- dgop
-        #- danksearch
-        #- material-symbols-fonts
+    - repo: copr:copr.fedorainfracloud.org:solopasha:hyprland
+      packages:
+        - hyprland
+        - hyprcursor
+        - hyprutils
+        - hyprpicker
+        - pyprland
+        - xdg-desktop-portal-hyprland
+        - cliphist
+        - matugen
+        - uwsm
+    - repo: copr:copr.fedorainfracloud.org:avengemedia:dms
+      packages:
+        - dms
+    - repo: copr:copr.fedorainfracloud.org:avengemedia:danklinux
+      packages:
+        - quickshell
+        - dgop
+        - danksearch
+        - material-symbols-fonts
   #login/locking
     - sddm
     - sddm-themes
