--- a/recipes/dms-packages.yml
+++ b/recipes/dms-packages.yml
@@ -10,18 +10,12 @@ repos:
     - avengemedia/danklinux
     - solopasha/hyprland
     - ilyaz/LACT
-optfix:
-  - xpipe
 install:
   packages:
-    - repo: xpipe-repo
-      packages:
-        - xpipe
   #copr - desktop
     - hyprland
     - hyprcursor
     - hyprutils
-    - hyprpicker
     - pyprland
     - xdg-desktop-portal-hyprland
     - cliphist
@@ -106,6 +100,12 @@ install:
     - distrobox
   #open tablet driver
     - https://github.com/OpenTabletDriver/OpenTabletDriver/releases/download/v0.6.6.2/opentabletdriver-0.6.6.2-1.x86_64.rpm
+    - repo: copr:copr.fedorainfracloud.org:solopasha:hyprland
+      packages:
+        - hyprpicker
+    - repo: xpipe-repo
+      packages:
+        - xpipe
   exclude:
     - wofi
     - nwg-panel   
