--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -8,7 +8,7 @@ install:
     - sddm-themes
     - keepassxc
   #libraries/tools
-    - i2c-tools
+   # - i2c-tools
     - libatomic
     - tuned
     - xdg-user-dirs
@@ -60,17 +60,17 @@ install:
     - wlr-randr
   #theming
     - qt6-qtwayland
-    - qt6-qtmultimedia
+  #  - qt6-qtmultimedia
     - qt6-qtsvg
     - qt5-qtsvg
     - qt5ct
     - qt6ct
     - qt6-qt5compat    
-    - adw-gtk3-theme
+   # - adw-gtk3-theme
     - gnome-themes-extra
     - breeze-icon-theme 
     - papirus-icon-theme
-    - adwaita-icon-theme
+   # - adwaita-icon-theme
   #silverblue replacement packages
     - distrobox
   #open tablet driver
