--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -2,21 +2,14 @@ type: dnf
 repos:
   nonfree: rpmfusion
   copr: 
-    - solopasha/hyprland
-    - errornointernet/packages 
-    - ilyaz/LACT
-    # ^copr test
 install:
   packages:
-  #test 
-    - qt5-qtwayland
-    - qt6-qtdeclarative
   #login/locking
     - sddm
     - sddm-themes
     - keepassxc
   #libraries/tools
-   # - i2c-tools
+    - i2c-tools
     - libatomic
     - tuned
     - xdg-user-dirs
@@ -68,7 +61,7 @@ install:
     - wlr-randr
   #theming
     - qt6-qtwayland
-  #  - qt6-qtmultimedia
+    - qt6-qtmultimedia
     - qt6-qtsvg
     - qt5-qtsvg
     - qt5ct
@@ -78,7 +71,7 @@ install:
     - gnome-themes-extra
     - breeze-icon-theme 
     - papirus-icon-theme
-   # - adwaita-icon-theme
+    - adwaita-icon-theme
   #silverblue replacement packages
     - distrobox
   #open tablet driver
