--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,7 +7,7 @@ image-version: 43
 
 
 modules:
-  - from-file: fedora-packages.yml
+  - from-file: final-test.yml
   #- from-file: copr-hyprland.yml
   #- from-file: copr-danklinux.yml
   #- from-file: copr-lact.yml
