--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,11 +7,11 @@ image-version: 43
 
 
 modules:
-  - from-file: final-test.yml
-  #- from-file: copr-hyprland.yml
-  #- from-file: copr-danklinux.yml
-  #- from-file: copr-lact.yml
-  #- from-file: repo-xpipe.yml
+  - from-file: fedora-packages.yml
+  - from-file: copr-hyprland.yml
+  - from-file: copr-danklinux.yml
+  - from-file: copr-lact.yml
+  - from-file: repo-xpipe.yml
   - from-file: remove-deps.yml
   - from-file: fonts.yml
   - from-file: files.yml
