--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -66,7 +66,7 @@ install:
     - qt5ct
     - qt6ct
     - qt6-qt5compat    
-   # - adw-gtk3-theme
+    - adw-gtk3-theme
     - gnome-themes-extra
     - breeze-icon-theme 
     - papirus-icon-theme
