--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -62,6 +62,7 @@ install:
     - qt6-qtwayland
     - qt6-qtmultimedia
     - qt6-qtsvg
+    - qt6-qttools
     - qt5-qtsvg
     - qt5ct
     - qt6ct
