--- a/recipes/copr-danklinux.yml
+++ b/recipes/copr-danklinux.yml
@@ -5,7 +5,7 @@ repos:
     - avengemedia/danklinux
 install:
   packages:
-    - quickshell
+    - quickshell-git
     - dgop
     - danksearch
     - material-symbols-fonts
