--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -7,7 +7,6 @@ install:
     - sddm
     - sddm-themes
     - keepassxc
-    - polkit-kde
   #libraries/tools
     - i2c-tools
     - libatomic
@@ -17,7 +16,6 @@ install:
     - cmake
     - socat
     - micro
-    - evolution-data-server #noctalia-shell OSD dep
   #desktop utils
     - wl-clipboard
     - kitty
@@ -32,7 +30,6 @@ install:
     - btop
     - mousepad
     - pavucontrol
-    - wlsunset
   #sound
     - pamixer
     - alsa-utils
@@ -66,8 +63,7 @@ install:
     - qt6-qtwayland
     - qt6-qtmultimedia
     - qt6-qtsvg
-    - qt5-qtsvg
-    - qt5ct
+    - qt6-qtbase 
     - qt6ct
     - qt6-qt5compat    
     - adw-gtk3-theme
