--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -5,12 +5,10 @@ description: nothing but pain
 base-image: quay.io/fedora-ostree-desktops/base-atomic
 image-version: 43
 
-
 modules:
   - from-file: fedora-packages.yml
   - from-file: copr-hyprland.yml
-  #  from-file: copr-quickshell.yml # for quickshell-git
-  - from-file: copr-noctalia.yml
+  - from-file: copr-danklinux.yml
   - from-file: copr-lact.yml
   - from-file: repo-xpipe.yml
   - from-file: remove-deps.yml
