--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -19,8 +19,7 @@ install:
   #desktop utils
     - wl-clipboard
     - kitty
-    - slurp
-    - grim
+    - flameshot
     - ImageMagick
     - eog
     - inxi
