allegedly bootc fixed swtpm issues

--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -4,8 +4,7 @@ repos:
 install:
   packages:
   #login/locking
-    - sddm
-    - sddm-themes
+    - greetd
     - keepassxc
   #libraries/tools
     - i2c-tools
