removed hyprpicker, modified services, added qt6-base

--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -60,6 +60,7 @@ install:
   #theming
     - qt6-qtwayland
     - qt6-qtmultimedia
+    - qt6-qtbase
     - qt6-qtsvg
     - qt6ct
     - qt6-qt5compat    
