--- a/files/systemd/system/greetd-user.service
+++ b/files/systemd/system/greetd-user.service
@@ -6,7 +6,7 @@ After=local-fs.target
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c 'id -u greeter &>/dev/null || useradd -r -m -d /var/lib/greeter -s /sbin/nologin -c "Greeter Service User" greeter'
+ExecStart=/bin/bash -c 'id -u greeter &>/dev/null || useradd -r -M -s /sbin/nologin -c "Greeter Service User" greeter'
 RemainAfterExit=yes
 
 [Install]
