--- a/recipes/fedora-packages.yml
+++ b/recipes/fedora-packages.yml
@@ -18,8 +18,7 @@ install:
   #desktop utils
     - wl-clipboard
     - kitty
-    - grim
-    - flameshot
+    - satty
     - ImageMagick
     - eog
     - inxi
